[tool.poetry]
name = "coding-dojo"
version = "0.1.0"
description = ""
authors = ["Charlton Lim <cadmusthefounder@gmail.com>"]
readme = "README.md"
packages = [{include = "coding_dojo"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "~7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
